# loop-engineering-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: article-notes-ko.md  extensions-ko.md
examples/: docs_agent_demo.py  hosted_judge_demo.py  langchain_adapter_demo.py  langsmith_export_demo.py  llm_judge_demo.py  server_app.py
src/loop_engineering_agent/: __init__.py  adapters.py  cli.py  core.py  graders.py  hosted_judges.py  langsmith.py  persistence.py  server.py
tests/: test_cli.py  test_hosted_judges.py  test_langchain_adapter.py  test_langsmith_integration.py  test_llm_judge.py  test_loop_stack.py  test_server.py  test_trace_persistence.py
