[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-agent"
version = "0.1.0"
description = "A reference implementation of stacked loop engineering for agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Simon / Hermes Agent"}]
keywords = ["agents", "loop-engineering", "langchain", "verification", "event-driven", "hill-climbing"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
loop-agent = "loop_engineering_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
