[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-agent"
version = "0.2.0"
description = "A reference implementation of stacked loop engineering for agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Simon / Hermes Agent"}]
keywords = ["agents", "loop-engineering", "langchain", "verification", "event-driven", "hill-climbing"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "fastapi>=0.115", "httpx>=0.27"]
server = ["fastapi>=0.115", "uvicorn>=0.30"]
langchain = ["langchain>=0.3"]
llm = ["openai>=1.0"]
all = ["fastapi>=0.115", "uvicorn>=0.30", "langchain>=0.3", "openai>=1.0"]

[project.scripts]
loop-agent = "loop_engineering_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
